add id link menu

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,49 +1,60 @@
-
-<section class="products">
-    <a name="products"></a>
-    <div class="container">        
-        <p class="products__label">100% natural</p>
-        <h2 class="products__title">Products</h2>
-        <ul class="products__list">
-            <li class="products__item">
-                <div class="products__wrapper products__wrapper--fist">
-                    <h3 class="products__subtitle">Ice cream</h3>
-                    <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                    <div class="product__wrapper--desc">
-                        <button type="button" class="products__description">
-                            <svg  class="products__btn-icon" width="40px" height="40px">
-                                <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
-                            </svg>
-                        </button>
-                    </div> 
-                </div>
-            </li>
-            <li class="products__item">
-                <div class="products__wrapper products__wrapper--second">
-                    <h3 class="products__subtitle">Ice coffee</h3>
-                    <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                    <div class="product__wrapper--desc">
-                        <button type="button" class="products__description">
-                            <svg  class="products__btn-icon" width="40px" height="40px">
-                                <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
-                            </svg>
-                        </button>
-                    </div>    
-                </div> 
-            </li>
-            <li class="products__item">
-                <div class="products__wrapper products__wrapper--third">
-                    <h3 class="products__subtitle">Milkshakes</h3>
-                    <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                    <div class="product__wrapper--desc">
-                        <button type="button" class="products__description">
-                            <svg  class="products__btn-icon" width="40px" height="40px">
-                                <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
-                            </svg>
-                        </button>
-                    </div>   
-                </div>   
-            </li>
-        </ul>
-    </div>
+<section class="products" id="products">
+  <a name="products"></a>
+  <div class="container">
+    <p class="products__label">100% natural</p>
+    <h2 class="products__title">Products</h2>
+    <ul class="products__list">
+      <li class="products__item">
+        <div class="products__wrapper products__wrapper--fist">
+          <h3 class="products__subtitle">Ice cream</h3>
+          <p class="products__about">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+          <div class="product__wrapper--desc">
+            <button type="button" class="products__description">
+              <svg class="products__btn-icon" width="40px" height="40px">
+                <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </li>
+      <li class="products__item">
+        <div class="products__wrapper products__wrapper--second">
+          <h3 class="products__subtitle">Ice coffee</h3>
+          <p class="products__about">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+          <div class="product__wrapper--desc">
+            <button type="button" class="products__description">
+              <svg class="products__btn-icon" width="40px" height="40px">
+                <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </li>
+      <li class="products__item">
+        <div class="products__wrapper products__wrapper--third">
+          <h3 class="products__subtitle">Milkshakes</h3>
+          <p class="products__about">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+          <div class="product__wrapper--desc">
+            <button type="button" class="products__description">
+              <svg class="products__btn-icon" width="40px" height="40px">
+                <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
