--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,5 @@
 <!---advantages-->
-<section class="advantages">
+<section class="advantages" id="advantages">
   <div class="container">
     <h2 class="visually-hidden">Advantages</h2>
     <ul class="advantage-list">
