--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -16,16 +16,16 @@
             <a class="nav-list__link link" href="./index.html">Home</a>
           </li>
           <li class="nav-list__item">
-            <a class="nav-list__link link" href="">About us</a>
+            <a class="nav-list__link link" href="#about">About us</a>
           </li>
           <li class="nav-list__item">
-            <a class="nav-list__link link" href="">How it’s made?</a>
+            <a class="nav-list__link link" href="#advantages">How it’s made?</a>
           </li>
           <li class="nav-list__item">
-            <a class="nav-list__link link" href="">Our products</a>
+            <a class="nav-list__link link" href="#products">Our products</a>
           </li>
           <li class="nav-list__item">
-            <a class="nav-list__link link" href="">Contact</a>
+            <a class="nav-list__link link" href="#contacts">Contact</a>
           </li>
         </ul>
 
