--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -4,6 +4,14 @@
   background-image: linear-gradient(to bottom,
       #FFFfff 0 26%,
       #FFF5F6 0 74%);
+  @media screen and (min-width: 768px) {
+    padding-top: 80px;
+    padding-bottom: 40px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 
 .wraper-grid {
