--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
         <!-- -------------Contacts----------------- -->
 
-        <section class="contacts">
+        <section class="contacts" id="contacts">
           <div class="container">
 
             <div class="wraper-grid">
@@ -36,61 +36,6 @@
                   </div>
                 </div>
               </div>
-
-<section class="contacts" id="contacts">
-  <div class="container">
-    <div class="contacts-wraper">
-      <h3 class="visually__hidden">Контакты в городах</h3>
-      <ul class="contacts-list">
-        <li class="contacts-compani">CAFE</li>
-        <li class="contacts-city">Chikago</li>
-        <p class="contacts-text">
-          Fusce ut velit laoreet, tempus arcu molestie vulputate
-        </p>
-        <div class="border"></div>
-        <li class="contacts-days">Monday - Friday</li>
-        <li class="contacts-time">06:00 AM - 10:00 PM</li>
-        <li class="contacts-days">Saturday - Sunday</li>
-        <li class="contacts-time">08:00 AM - 16:00 PM</li>
-        <div class="border"></div>
-        <li class="contacts-connect-wraper">
-          <a href="tel:+61(0)383766284" class="contacts-connect">
-            +61(0 )383 766 284
-          </a>
-        </li>
-        <li class="contacts-connect">
-          <a href="mailto:noreply@envato.com" class="contacts-connect">
-            noreply@envato.com
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="contacts-wraper">
-      <ul class="contacts-list">
-        <li class="contacts-compani-food">FOODTRUCK</li>
-        <li class="contacts-city">Los Angeles</li>
-        <p class="contacts-text">
-          Fusce ut velit laoreet, tempus arcu molestie vulputate
-        </p>
-        <div class="border"></div>
-        <li class="contacts-days">Monday - Friday</li>
-        <li class="contacts-time">06:00 AM - 10:00 PM</li>
-        <li class="contacts-days">Saturday - Sunday</li>
-        <li class="contacts-time">08:00 AM - 16:00 PM</li>
-        <div class="border"></div>
-        <li class="contacts-connect-wraper">
-          <a href="tel:+61(0)383766284" class="contacts-connect">
-            +61(0 )383 766 284
-          </a>
-        </li>
-        <li class="contacts-connect">
-          <a href="mailto:noreply@envato.com" class="contacts-connect">
-            noreply@envato.com
-          </a>
-        </li>
-      </ul>
-    </div>
 
               <div class="contacts-wraper">
                 <div class="contacts-list">
@@ -214,11 +159,11 @@
                 <input type="checkbox" class="modal-form__check " id="modal-check" name="modal-check" />
                 <label for="modal-check" class="modal-form__note">
 
-                  I agree to receive the newsletter and to the<a href="#" class="modal-form__link"> Privacy Policy</a>
+                  I agree to receive newsletters and accept the<a href="#" class="modal-form__link"> Privacy Policy</a>
                 </label>
               </div>
               <div class="modal-form__button">
-                <button type="submit" class="modal-form__send">Отправить</button>
+                <button type="submit" class="modal-form__send">Send</button>
               </div>
             </form>
           </div>
