--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,11 +1,14 @@
 .customer-reviews {
   padding-top: 80px;
+  @media screen and (min-width: 1280px) {
+    padding-top: 120px;
+  }
   & > .container {
     padding: 0 20px;
     @media screen and (min-width: 768px) {
       padding: 0 74px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       padding: 0 123px;
     }
   }
