--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,6 +1,14 @@
 .products {
   padding-top: 80px;
   padding-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    padding-top: 40px;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 .products__title {
   display: block;
