--- a/css/index.css
+++ b/css/index.css
@@ -339,7 +339,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .footer-section {
-  border-bottom: 1px solid #e1e1e1;
+  border-top: 1px solid #e1e1e1;
 }
 
 @media screen and (min-width: 768px) {
@@ -356,54 +356,8 @@ h1, h2, h3, h4, h5, h6, p {
   fill: #d41443;
 }
 
-.footer-text {
-  font-family: "Titan One";
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.16;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #ffa5ba;
-}
-@media screen and (min-width: 768px) {
-  .footer-text {
-    font-size: 26px;
-    line-height: 1.15;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .footer-text {
-    font-size: 30px;
-    line-height: 1.13;
-  }
-  .footer-text br {
-    content: "";
-  }
-}
-
-.footer-logo {
-  font-family: "Titan One";
-  font-weight: 700;
-  font-size: 34px;
-  line-height: 1.14;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #d41443;
-}
-@media screen and (min-width: 768px) {
-  .footer-logo {
-    font-size: 48px;
-    letter-spacing: 0.06em;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .footer-logo {
-    font-size: 58px;
-    line-height: 1.13;
-  }
-  .footer-logo br {
-    content: "";
-  }
+.box-two {
+  margin-bottom: 40px;
 }
 
 .contacts-footer {
@@ -416,7 +370,6 @@ h1, h2, h3, h4, h5, h6, p {
   line-height: 186%;
   text-align: right;
   color: #000;
-  margin-bottom: 40px;
 }
 .contacts-footer__tel {
   color: #d82f58;
@@ -433,36 +386,94 @@ h1, h2, h3, h4, h5, h6, p {
   }
 }
 
-.footer-list {
-  margin-bottom: 16px;
-}
-.footer-list:last-child {
+.box-one {
   margin-bottom: 40px;
 }
-.footer-list a {
+@media screen and (min-width: 1280px) {
+  .box-one {
+    margin-bottom: 60px;
+  }
+}
+.box-one__list {
+  margin-bottom: 16px;
+}
+.box-one__list:last-child {
+  margin-bottom: 0;
+}
+.box-one__list a {
   text-decoration: none;
 }
 @media screen and (min-width: 768px) {
-  .footer-list {
+  .box-one__list {
     margin-bottom: 12px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .footer-list {
+  .box-one__list {
     margin-bottom: 16px;
   }
-  .footer-list:last-child {
-    margin-bottom: 60px;
+}
+.box-one__text {
+  font-family: "Titan One";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #ffa5ba;
+}
+@media screen and (min-width: 768px) {
+  .box-one__text {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .box-one__text {
+    font-size: 30px;
+    line-height: 1.13;
+  }
+  .box-one__text br {
+    content: "";
+  }
+}
+.box-one__logo {
+  font-family: "Titan One";
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+}
+@media screen and (min-width: 768px) {
+  .box-one__logo {
+    font-size: 48px;
+    letter-spacing: 0.06em;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .box-one__logo {
+    font-size: 58px;
+    line-height: 1.13;
+  }
+  .box-one__logo br {
+    content: "";
   }
 }
 
 .socials-footer {
   display: flex;
   justify-content: right;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 1280px) {
+  .socials-footer {
+    margin-top: 12px;
+  }
 }
 .socials-footer__item {
   margin-right: 28.24px;
-  margin-bottom: 40px;
 }
 .socials-footer__item:last-child {
   margin-right: 0;
@@ -470,11 +481,6 @@ h1, h2, h3, h4, h5, h6, p {
 @media screen and (min-width: 768px) {
   .socials-footer__item {
     margin-right: 30px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .socials-footer__item {
-    margin-top: 12px;
   }
 }
 
