--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,23 +1,23 @@
 <footer class="footer">
   <div class="container">
     <div class="footer-container">
-      <div>
+      <div class="box-one">
         <ul>
-          <li class="footer-list">
-            <b class="footer-text"
+          <li class="box-one__list">
+            <b class="box-one__text"
               >homemade ice cream<br />
               made</b
             >
           </li>
-          <li class="footer-list">
-            <a class="footer-logo" href=""
+          <li class="box-one__list">
+            <a class="box-one__logo" href=""
               >with<br />
               passion</a
             >
           </li>
         </ul>
       </div>
-      <div>
+      <div class="box-two">
         <address>
           <ul class="socials-footer">
             <li class="socials-footer__item">
@@ -53,9 +53,10 @@
       </div>
     </div>
   </div>
-  <div class="footer-section"></div>
-  <p class="ice-cream-footer">
-    © 2019 - IceCream.<br />
-    All Rights Reserved.
-  </p>
+  <div class="footer-section">
+    <p class="ice-cream-footer">
+      © 2019 - IceCream.<br />
+      All Rights Reserved.
+    </p>
+  </div>
 </footer>
