--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -21,7 +21,7 @@
     @include mq (retina) {
     background-image: url(../images/milksplash-desktop@x2.png);
     }
-    background-position: center bottom 0;
+    background-position: center bottom;
     background-size: auto;
     padding-top: 60px;
     
