--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,58 +1,91 @@
 <!-- Секція about -->
 <section class="about-section" id="about">
-    <a name="about"></a>
-    <div class="about-section__container container">
-        <div class="about-section__titles">
-            <p class="about-section__subtitle">tradition and love</p> 
-            <h2 class="about-section__title">how it’s made?</h2>
-        </div>
-        <div class="about-section__info">
-            <div class="about-section__img-thumb">
-            <picture>
-            <source srcset="./images/bigecocow-desktop.png 1x, ./images/bigecocow-desktop@x2.png 2x" media="(min-width: 1280px)">
-            <source srcset="./images/bigecocow-tablet.png 1x, ./images/bigecocow-tablet@x2.png 2x" media="(min-width: 768px)">
-            <source srcset="./images/bigecocow-mobile.png 1x, ./images/bigecocow-mobile@x2.png 2x" media="(min-width: 320px)">
-            <img src="./images/bigecocow-mobile.png" alt="cow">
-        </picture>    
-            </div>
-        <div class="about-section__main-text">
+  <a name="about"></a>
+  <div class="about-section__container container">
+    <div class="about-section__titles">
+      <p class="about-section__subtitle">tradition and love</p>
+      <h2 class="about-section__title">how it’s made?</h2>
+    </div>
+    <div class="about-section__info">
+      <div class="about-section__img-thumb">
+        <picture>
+          <source
+            srcset="
+              ./images/bigecocow-desktop.png    1x,
+              ./images/bigecocow-desktop@x2.png 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/bigecocow-tablet.png    1x,
+              ./images/bigecocow-tablet@x2.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              ./images/bigecocow-mobile.png    1x,
+              ./images/bigecocow-mobile@x2.png 2x
+            "
+            media="(min-width: 320px)"
+          />
+          <img src="./images/bigecocow-mobile.png" alt="cow" />
+        </picture>
+      </div>
+      <div class="about-section__main-text">
         <p class="about-section__text">
-            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
-            egestas eros.Maecenas eleifend erat at justo fringilla.
+          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+          cursus, faucibus lorem eget, egestas eros.Maecenas eleifend erat at
+          justo fringilla.
         </p>
 
         <p class="about-section__description">
-        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
-        imperdiet placerat.
-        Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-        tincidunt.
+          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+          tincidunt.
         </p>
 
         <span class="about-section__description paragraph">
-        Aliquam erat volutpat. Aenean accumsan.
+          Aliquam erat volutpat. Aenean accumsan.
         </span>
-    
-        <button data-modal-open="modal-about" type="button" class="about-section__button about-section__button-text"> Read more 
-            <svg class="about-section__button-icon" width="10" height="10">
-                <use href="./images/icon/svg-all.svg#icon-btn-arrow"></use>
-            </svg>
+
+        <button
+          data-modal-open="modal-about"
+          type="button"
+          class="about-section__button about-section__button-text"
+        >
+          Read more
+          <svg class="about-section__button-icon" width="10" height="10">
+            <use href="./images/icon/svg-all.svg#icon-btn-arrow"></use>
+          </svg>
         </button>
-        </div>
-        </div>
+      </div>
     </div>
+  </div>
 </section>
 
 <!-- Модальне вікно about -->
 <div id="modal-about" class="backdrop is-hidden">
-    <div class="about-modal">
-        <button data-modal-close="modal-about" type="button" class="about-modal__close-button">
-            <svg class="about-modal__close-button-svg" width="30px" height="30px">
-                <use href="./images/icon/svg-all.svg#about-modal-close"></use>
-            </svg>
-        </button>
-        <p class="about-modal__title">Our products</p>
-        <p class="about-modal__text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem harum eaque sint iste eveniet ullam impedit minima asperiores a et debitis laborum labore at sunt, aut exercitationem nesciunt eum! Aut?
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam corporis eos ipsa omnis similique ex rerum laudantium, neque voluptatum architecto iste in consectetur excepturi veniam doloremque alias ipsum veritatis natus?   
-        </p>
-    </div>
+  <div class="about-modal">
+    <button
+      data-modal-close="modal-about"
+      type="button"
+      class="about-modal__close-button"
+    >
+      <svg class="about-modal__close-button-svg" width="30" height="30">
+        <use href="./images/icon/svg-all.svg#about-modal-close"></use>
+      </svg>
+    </button>
+    <p class="about-modal__title">Our products</p>
+    <p class="about-modal__text">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem harum
+      eaque sint iste eveniet ullam impedit minima asperiores a et debitis
+      laborum labore at sunt, aut exercitationem nesciunt eum! Aut? Lorem ipsum
+      dolor sit amet consectetur, adipisicing elit. Laboriosam corporis eos ipsa
+      omnis similique ex rerum laudantium, neque voluptatum architecto iste in
+      consectetur excepturi veniam doloremque alias ipsum veritatis natus?
+    </p>
+  </div>
 </div>
