--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -7,7 +7,6 @@
             class="logo"
             src="./images/logo/logo-icecream.png"
             alt="icecream"
-            width=""
           />
         </a>
 
@@ -36,7 +35,7 @@
           aria-controls="nav-container"
           data-menu-button
         >
-          <svg width="" height="" aria-label="Переключатель мобильного меню">
+          <svg aria-label="Переключатель мобильного меню">
             <use
               class="header-button__menu"
               href="./images/icon/svg-all.svg#icon-icon-burger"
@@ -65,7 +64,11 @@
         <!--мобільне мєню-->
         <div class="mobile-overlay" data-menu>
           <div class="mobile-container" id="nav-container">
-            <button class="menu-button" type="submit" data-modal-open="modal-header-menu">
+            <button
+              class="menu-button"
+              type="submit"
+              data-modal-open="modal-header-menu"
+            >
               <span class="menu-button__wrapper">
                 <span class="menu-button__txt">Buy now</span>
                 <svg class="menu-button__icon">
@@ -75,19 +78,29 @@
             </button>
             <ul class="mobile-list">
               <li class="mobile-list__item">
-                <a class="mobile-list__link" data-menu-close href="./index.html">Home</a>
+                <a class="mobile-list__link" data-menu-close href="./index.html"
+                  >Home</a
+                >
               </li>
               <li class="mobile-list__item">
-                <a class="mobile-list__link" data-menu-close href="#about">About us</a>
+                <a class="mobile-list__link" data-menu-close href="#about"
+                  >About us</a
+                >
               </li>
               <li class="mobile-list__item">
-                <a class="mobile-list__link" data-menu-close href="#about">How it’s made?</a>
+                <a class="mobile-list__link" data-menu-close href="#about"
+                  >How it’s made?</a
+                >
               </li>
               <li class="mobile-list__item">
-                <a class="mobile-list__link" data-menu-close href="#products">Our products</a>
+                <a class="mobile-list__link" data-menu-close href="#products"
+                  >Our products</a
+                >
               </li>
               <li class="mobile-list__item">
-                <a class="mobile-list__link" data-menu-close href="#contacts">Contact</a>
+                <a class="mobile-list__link" data-menu-close href="#contacts"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
@@ -218,7 +231,11 @@
           </label>
         </div>
 
-        <button type="button" class="clos-modal pointer" data-modal-close="modal-header-menu">
+        <button
+          type="button"
+          class="clos-modal pointer"
+          data-modal-close="modal-header-menu"
+        >
           <svg class="clos-icon">
             <use href="./images/icon/svg-all.svg#icon-closing"></use>
           </svg>
